# mimedemo

./: .gitignore  CMakeLists.txt  README.md  meson.build
debian/: README.Debian  changelog  control  copyright  debhelper-build-stamp  files  mimedemo.substvars  postinstall
misc/: example.adwf  mimedemo.desktop  mimedemo.xml
src/: main.cpp
